Fixed bug #74589 __DIR__ wrong for unicode character